<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Add a new credit card"
        android:textSize="24sp" />

    <EditText
        android:inputType="textCapWords"
        android:id="@+id/etCardHolderFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint" />

    <EditText
        android:inputType="textCapWords"
        android:id="@+id/etCardHolderLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint" />

    <TextView
        android:id="@+id/tvCardIssuer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/card_issuer_hint"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number_hint"
        android:inputType="number" />

    <EditText
        android:inputType="text|number"
        android:id="@+id/etExpiryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/expiry_date_hint" />

    <EditText
        android:id="@+id/etCVV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv_hint"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btnSaveCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_label" />

</LinearLayout>
